@@ -1,3 +1,4 @@
+Added draggable containers
 Build a Fraction tab: Started canvas
 Prepended "with" to copy methods for lombok data classes
 Added a new (empty) tab for "Build a Fraction"
